[package]
name = "crypto_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = { version = "0.22", features = ["tokio-comp"] }
comfy-table = "6.1"
log = "0.4"
env_logger = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1.88"
thiserror = "2.0.12"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1