[package]
name = "crypto_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4"
comfy-table = "6.1"
ctrlc = "3.4"
dotenv = "0.15"
env_logger = "0.10"
hex = "0.4"
hmac = "0.12"
log = "0.4"
redis = { version = "0.22", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1